# Yoda

./: .gitignore  README.md  ROADMAP.md
Yoda.egg-info/: requires.txt  top_level.txt
_archive/: .gitignore  README.md  pyproject.toml  requirements.txt
_archive/.github/workflows/: release.yml
_archive/Yoda.egg-info/: PKG-INFO
_archive/cpp_modules/: main.cpp
_archive/database/: database.json
_archive/not_now/: INTEGRATION_GUIDE.md  ROUTER_SETUP.md  router_api.py  router_client.py
_archive/nsm_modules/: app.py  audio_player.py  nsm_files.py  nsm_main.py  nsm_network_sniffer.py  nsm_port_scanner.py  nsm_utilities.py  version.py
_archive/setup/: LLM_CPU_ONLY_SETUP.txt  arch_base.txt  debian_base.txt  install_yoda_audio.sh  uninstall_yoda_audio.sh  yoda_setup.txt
_archive/web_modules/: README.md  run_json_server  yoda.html
_archive/web_modules/css/: yoda.css
_archive/web_modules/js/: matrix.js  yoda.js
_archive/yoda/: main.py
_archive/yoda_modules/: yoda.py  yoda_controller.py
database/: git_branches.txt
learn/: bluetooth_frames.md  bluetooth_vs_ble.md  wifi_frames.md
nsm_modules/: nsm_network_scanner.py  nsm_server.py
src/: PROGRESS.md  README.md  main.py  network_monitor.py  nsm_monitor.py  nsm_server_mcp.py  nsm_tui.py  nsm_vars.py  nsm_wifi.py  requirements.txt
test/: .env.example  .gitignore  NTFY_GUIDE.md  README.md  VOICE_AGENT_GUIDE.md  ble.py  database.py  deappreciated.py  error.txt  main.py  nsm_ble.py  nsm_database.py  nsm_monitor.py  nsm_tts.py  nsm_tui.py  nsm_vars.py  nsm_voice_agent.py  nsm_wifi.py  requirements.txt  vars.py  (+5 more)
