[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Yoda"
version = "3.0.0"


dependencies = [
    "requests",
    "scapy",
    "manuf",
    "ipaddress",
    "requests",
    "rich",
    "pathlib",
    "pyfiglet",
    "gtts",
    "pyttsx3",
    "ifcfg",
    "sounddevice",
    "samplerate"
]


[tool.setuptools]
packages = ["nsm_modules", "yoda"]